# solmultisig

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: App.tsx
migrations/: deploy.ts
programs/solmultisig/: Cargo.toml
programs/solmultisig/src/: lib.rs
tests/: solmultisig.ts
