[package]
name = "solmultisig"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solmultisig"
path = "src/lib.rs"

# Features
[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

# Dependencies
[dependencies]
anchor-lang = "0.31.1"

[profile.release]
overflow-checks = true